<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="zukpref_title">Zuk Extras</string>
    <string name="battery_settings_title">Battery</string>
    <string name="battery_title">Mode Antutu profile</string>
    <string name="battery_summary">Enable/disable mode Antutu profile</string>
	
    <string name="exp_battery_title">AutoSMP Hotplug</string>
    <string name="exp_battery_summary">Enable/disable AutoSMP hotplug (Help with the battery drain of the Whatsapp Web in background)</string>

    <string name="software_buttons_title">Software Buttons</string>
    <string name="software_buttons_summary">Enable/disable software buttons, needs reboot for apply this change.</string>

    <!-- Lockscreen battery info indicator  -->
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
</resources>
