<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    <PreferenceCategory
        android:key="batt"
        android:title="@string/battery_settings_title" >

        <SwitchPreference
            android:key="battery_mode"
            android:defaultValue="false"
            android:title="@string/battery_title"
            android:summary="@string/battery_summary" />

        <SwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />

  </PreferenceCategory>
</PreferenceScreen>
